--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "commonjs",
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@types/lodash": "^4.17.4",
         "@types/node": "^16.11.10",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "dotenv": "^16.0.3",
@@ -24,6 +25,8 @@
         "cors": "^2.8.5",
         "dot-env": "^0.0.1",
         "express": "^4.18.2",
+        "lodash": "^4.17.21",
+        "moment-timezone": "^0.5.45",
         "nodemon": "^2.0.21",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.13",
