--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "scripts": {
         "nodemon": "nodemon -r dotenv/config src/index.ts",
         "start": "ts-node -r tsconfig-paths/register ./src/index.ts",
+        "master": "node dist/index.js",
         "typeorm": "typeorm-ts-node-commonjs",
         "build": "tsc"
     }
