--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
      "baseUrl": "./",
      "paths": {
        "@src/*": ["./src/*"],
+       "src/*": ["src/*"]
      },
      "esModuleInterop": true,
    },
-   "include": ["src/**/*.ts"],
-   "exclude": ["node_modules", "src/**/*.spec.ts"]
+  //  "include": ["src/**/*.ts"],
+  //  "exclude": ["node_modules", "src/**/*.spec.ts"]
  }
  
