--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
      },
      "esModuleInterop": true,
    },
-  //  "include": ["src/**/*.ts"],
-  //  "exclude": ["node_modules", "src/**/*.spec.ts"]
+   "include": ["src/**/*.ts"],
+   "exclude": ["node_modules", "src/**/*.spec.ts"]
  }
  
