--- a/package.json
+++ b/package.json
@@ -1,43 +1,53 @@
 {
-    "name": "typeorm-sample",
-    "version": "0.0.1",
-    "description": "Awesome project developed with TypeORM.",
-    "type": "commonjs",
-    "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/lodash": "^4.17.4",
-        "@types/node": "^16.11.10",
-        "@typescript-eslint/eslint-plugin": "^5.54.0",
-        "dotenv": "^16.0.3",
-        "eslint": "^8.35.0",
-        "eslint-config-standard-with-typescript": "^34.0.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-n": "^15.6.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "ts-node": "10.7.0",
-        "typescript": "^4.9.5"
-    },
-    "dependencies": {
-        "@alpacahq/alpaca-trade-api": "^3.0.1",
-        "amqplib": "^0.10.3",
-        "body-parser": "^1.20.2",
-        "class-validator": "^0.14.0",
-        "cors": "^2.8.5",
-        "dot-env": "^0.0.1",
-        "express": "^4.18.2",
-        "lodash": "^4.17.21",
-        "moment-timezone": "^0.5.45",
-        "nodemon": "^2.0.21",
-        "pg": "^8.4.0",
-        "reflect-metadata": "^0.1.13",
-        "socket.io": "^4.6.1",
-        "typeorm": "0.3.12"
-    },
-    "scripts": {
-        "nodemon": "nodemon -r dotenv/config src/index.ts",
-        "master": "ts-node -r tsconfig-paths/register ./src/index.ts",
-        "start": "node dist/index.js",
-        "typeorm": "typeorm-ts-node-commonjs",
-        "build": "tsc"
-    }
+	"name": "express-typescript-vercel-part2",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "nodemon src/index.ts",
+		"build": "rimraf dist && tsc",
+		"ts.check": "tsc --project tsconfig.json",
+		"add-build": "git add dist",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"pre-commit": [
+		"ts.check",
+		"build",
+		"add-build"
+	],
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/lodash": "^4.17.4",
+		"@types/msgpack5": "^3.4.6",
+		"@types/node": "^16.11.10",
+		"@types/ws": "^8.5.10",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"dotenv": "^16.0.3",
+		"eslint": "^8.35.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"ts-node": "10.7.0",
+		"typescript": "^4.9.5"
+	},
+	"dependencies": {
+		"@alpacahq/alpaca-trade-api": "^3.0.1",
+		"amqplib": "^0.10.3",
+		"body-parser": "^1.20.2",
+		"class-validator": "^0.14.0",
+		"cors": "^2.8.5",
+		"dot-env": "^0.0.1",
+		"express": "^4.18.2",
+		"lodash": "^4.17.21",
+		"moment-timezone": "^0.5.45",
+		"nodemon": "^2.0.21",
+		"pg": "^8.4.0",
+		"reflect-metadata": "^0.1.13",
+		"socket.io": "^4.6.1",
+		"typeorm": "0.3.12"
+	}
 }
