--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-   "compilerOptions": {
-     "target": "es2019",
-     "module": "commonjs",
-     "outDir": "dist",
-     "baseUrl": "./",
-     "paths": {
-       "@src/*": ["./src/*"],
-       "src/*": ["src/*"]
-     },
-     "esModuleInterop": true,
-   },
-   "include": ["src/**/*.ts"],
-   "exclude": ["node_modules", "src/**/*.spec.ts"]
- }
- 
+	"compilerOptions": {
+		"module": "commonjs",
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"target": "es6",
+		"noImplicitAny": true,
+		"moduleResolution": "node",
+		"sourceMap": true,
+		"outDir": "dist",
+		"baseUrl": ".",
+		"paths": {
+			"*": ["node_modules/*", "src/types/*"]
+		}
+	},
+	"include": ["./src/**/*"]
+}
